WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
272119
[WebXR] Depth values are not correct
https://bugs.webkit.org/show_bug.cgi?id=272119
Summary
[WebXR] Depth values are not correct
Mike Wyrzykowski
Reported
2024-04-03 16:39:57 PDT
[WebXR] Depth values are not correct
Attachments
Add attachment
proposed patch, testcase, etc.
Mike Wyrzykowski
Comment 1
2024-04-03 16:40:07 PDT
radar://125620290
Mike Wyrzykowski
Comment 2
2024-04-03 16:47:38 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/26820
EWS
Comment 3
2024-04-03 16:55:02 PDT
Committed
277040@main
(31c43b74127b): <
https://commits.webkit.org/277040@main
> Reviewed commits have been landed. Closing PR #26820 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug