Cherry-pick 31c43b74127b. rdar://125620290

[WebXR] Depth values are not correct
    https://bugs.webkit.org/show_bug.cgi?id=272119
    <radar://125620290>

    Reviewed by Dan Glastonbury.

    Compositor expects reverse-Z but WebXR writes forward Z values, so
    just zero them for now so the reprojection doesn't cause jittering.

    * Source/WebCore/Modules/webxr/WebXROpaqueFramebuffer.cpp:
    (WebCore::WebXROpaqueFramebuffer::blitSharedToLayered):

    Canonical link: https://commits.webkit.org/277040@main

Canonical link: https://commits.webkit.org/276863.10@safari-7619.1.8-branch